--- a/day-3/files/prometheus.yml
+++ b/day-3/files/prometheus.yml
@@ -11,3 +11,7 @@ scrape_configs:
   - job_name: "Meu Primeiro Exporter"
     static_configs:
       - targets: ["localhost:8899"]
+  
+  - job_name: 'segundo-exporter'
+    static_configs:
+      - targets: ['localhost:7788']
