--- a/day-3/files/prometheus.yml
+++ b/day-3/files/prometheus.yml
@@ -15,3 +15,7 @@ scrape_configs:
   - job_name: 'segundo-exporter'
     static_configs:
       - targets: ['localhost:7788']
+  
+  - job_name: 'node_exporter'
+	static_configs:
+	  - targets: ['localhost:9100']
