fix: Pod e PodMonitor label to avoid scrapping by the ServiceMonitor

--- a/pt/src/day-7/files/nginx-pod.yaml
+++ b/pt/src/day-7/files/nginx-pod.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: nginx-pod
   labels:
-    app: nginx
+    app: nginx-pod
 spec:
   containers: # containers do template 
     - name: nginx-container # nome do container
